cmake_minimum_required(VERSION 3.10)
project(00_contents)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../bin)

add_subdirectory( 01_hello_cpp ) 
add_subdirectory( 02_data ) 
add_subdirectory( 03_functions ) 
add_subdirectory( 04_cmdline ) 
add_subdirectory( 05_structures ) 
add_subdirectory( 06_arrays ) 
add_subdirectory( 07_operators ) 
add_subdirectory( 08_pointers ) 
add_subdirectory( 09_conditionals ) 
add_subdirectory( 10_loops ) 
add_subdirectory( 11_switch ) 
add_subdirectory( 12_demo_atm_machine ) 
add_subdirectory( 13_timers ) 
add_subdirectory( 14_state_machine ) 
add_subdirectory( 15_demo_coke_machine ) 
add_subdirectory( 16_singletons ) 
add_subdirectory( 17_centralcore ) 
add_subdirectory( 18_threads ) 
add_subdirectory( 19_observables ) 
add_subdirectory( 20_sockets ) 
add_subdirectory( 21_stock_symbols ) 
add_subdirectory( 22_stock_portfolio ) 

